Velcro test First SandBox/src/objects/Salesforce_Ticket__c.object
<CustomObject>
    <description>For users to enter salesforce help occurencies</description>
    <fields>
        <fullName>Action_Comments__c</fullName>
        <description>Describes the action of the person the ticket was assigned to</description>
        <label>Action Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who the ticket is assigned to</description>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Tickets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Date the ticket is closed</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Lists the department that the ticket owner belongs to</description>
        <label>Department</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Relations</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>ITC</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Enter the description of your question, problem or feedback here.</description>
        <inlineHelpText>Enter the description of your question, problem or feedback here.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Email__c</fullName>
        <label>Employee Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_First_Name__c</fullName>
        <label>Employee First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_Last_Name__c</fullName>
        <label>Employee Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Feedback_Description__c</fullName>
        <description>Provide feedback description</description>
        <inlineHelpText>Please provide feedback description</inlineHelpText>
        <label>Feedback Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Tickets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objects__c</fullName>
        <description>These are the objects that the request belongs to.</description>
        <label>Objects</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Ticket_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Forecasts</fullName>
                </value>
                <value>
                    <fullName>Leads</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Salesforce Ticket</fullName>
                </value>
                <value>
                    <fullName>Sample Requests</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <description>Date when the ticket is open</description>
        <label>Open Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Tickets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Problem_Description__c</fullName>
        <description>Description of Salesforce problem</description>
        <inlineHelpText>Please provide the description of the problem you have with Salesforce</inlineHelpText>
        <label>Problem Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Description__c</fullName>
        <description>Question Description</description>
        <inlineHelpText>Please provide your question description here</inlineHelpText>
        <label>Question Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ticket_Owner_Email__c</fullName>
        <description>Email of the ticket owner</description>
        <label>Ticket Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ticket_Owner_Region__c</fullName>
        <description>Picks owner region</description>
        <label>Ticket Owner Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>CONSUMER</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ticket_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ticket owner is the user who is requesting service</description>
        <label>Ticket Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ticket_Reason__c</fullName>
        <description>Determines issue user is having at salesforce.</description>
        <label>Ticket Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Ticket_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lightening for Outlook</fullName>
                </value>
                <value>
                    <fullName>Log in issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Processes failure</fullName>
                </value>
                <value>
                    <fullName>System failure</fullName>
                </value>
                <value>
                    <fullName>Existing Employee</fullName>
                </value>
                <value>
                    <fullName>New Employee</fullName>
                </value>
                <value>
                    <fullName>Report &amp; Dashboard Building</fullName>
                </value>
                <value>
                    <fullName>Campaign Creation</fullName>
                </value>
                <value>
                    <fullName>Object Utilization Question</fullName>
                </value>
                <value>
                    <fullName>New Application Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ticket_Status__c</fullName>
        <label>Ticket Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ticket_Type__c</fullName>
        <label>Ticket Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New License Request</fullName>
                </value>
                <value>
                    <fullName>Termination Request</fullName>
                </value>
                <value>
                    <fullName>User Assistance Request</fullName>
                </value>
                <value>
                    <fullName>Project and Customization Request</fullName>
                </value>
                <value>
                    <fullName>System Troubleshooting Request</fullName>
                </value>
                <value>
                    <fullName>Training Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Salesforce Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ST-{000000}</displayFormat>
        <label>Salesforce Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>